[tool.poetry]
name = "web-hw-11"
version = "0.1.0"
description = ""
authors = ["Mariia Bulavina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.27"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
